# invest-rag

./: .gitignore  LICENSE  README.md  README_TECHNICAL.md  lkjfalskdjfa  pyproject.toml
data/: README.md
data/samples/: sec_docs.jsonl
docs/: architecture.md  data_contract.md  evaluation.md
eval/: fails_vector_chunk_k1.jsonl  fails_vector_chunk_k10.jsonl  fails_vector_doc_k1.jsonl  fails_vector_doc_k10.jsonl  questions.jsonl  results_rerank_llm_chunk.json  results_rerank_llm_doc.json  results_vector_chunk.json  results_vector_doc.json
invest_rag.egg-info/: PKG-INFO  SOURCES.txt
notebooks/: 00_setup_and_ingest.ipynb  01_build_vector_index.ipynb  02_evaluate_retrieval.ipynb  03_rag_generate.ipynb
scripts/: init_project.py  make_chunks.py
src/: config.py
src/app/: cli.py  pipeline.py  rag_runtime.py
src/data_pipeline/: io_utils.py
src/eval/: retrieval_eval.py  retrieval_logging.py  search_wrappers.py
src/llm/: context.py  embedding.py  generate.py  rerank.py
src/retrieval/: artifacts.py  build_vector_index.py  chunk_loader.py  vector_store.py
